--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "express": "2.5.x",
-    "stripe" : "*",
-    "request" : "*"
+    "stripe" : "",
+    "request" : ""
   },
   "engines": {
     "node": "0.8.x",
